<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinalProject</string>
    <string name="welcome">Welcome to CS:GO Stats!</string>
    <string name="input_message">Please enter your SteamID64</string>
    <string name="enter_your_steam_id_64">Enter your SteamID64</string>
    <string name="dont_know">Click the button below to find your SteamID64!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial">Tutorial</string>
    <string name="submit">Submit</string>
    <string name="stepOne">1. Go to steamidfinder.com/lookup</string>
    <string name="stepTwo">2. Type your Steam username in the box</string>
    <string name="stepThree">3. Click the Get SteamId button</string>
    <string name="stepFour">4. Find the 17 digit number next to "steamID64:"</string>
    <string name="stepFive">5. Copy the 17 digit number</string>
    <string name="stepSix">6. Return to the first page and paste the number in the box</string>
    <string name="playerKills">Kills</string>
    <string name="playerDeaths">Deaths</string>
    <string name="playerKD">K/D</string>
    <string name="playerWins">Wins</string>
    <string name="name">Name</string>
    <string name="kills">Kills:</string>
    <string name="deaths">Deaths:</string>
    <string name="kd">K/D:</string>
    <string name="wins">Wins:</string>
</resources>
