<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:id="@+id/textViewVHPlayerName"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="30sp" android:textColor="#000000"/>
    <TextView
            android:text="@string/kills"
            android:layout_width="65dp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewVHPlayerName"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#000000"/>
    <TextView
            android:text="@string/playerKills"
            android:layout_width="93dp"
            android:layout_height="wrap_content" android:id="@+id/textViewVHPlayerKills"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="#000000"/>
    <TextView
            android:text="@string/deaths"
            android:layout_width="65dp"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textViewVHPlayerKills" android:textColor="#000000"/>
    <TextView
            android:text="@string/playerDeaths"
            android:layout_width="65dp"
            android:layout_height="wrap_content" android:id="@+id/textViewVHPlayerDeaths"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textViewVHPlayerKills"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textViewVHPlayerKills" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:textColor="#000000"/>
    <TextView
            android:text="@string/kd"
            android:layout_width="65dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewVHPlayerDeaths" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textColor="#000000"/>
    <TextView
            android:text="@string/playerKD"
            android:layout_width="65dp"
            android:layout_height="wrap_content" android:id="@+id/textViewVHPlayerKD"
            app:layout_constraintTop_toBottomOf="@+id/textViewVHPlayerDeaths"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:textColor="#000000"/>
    <TextView
            android:text="@string/wins"
            android:layout_width="65dp"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textViewVHPlayerKD" android:textColor="#000000"/>
    <TextView
            android:text="@string/playerWins"
            android:layout_width="65dp"
            android:layout_height="wrap_content" android:id="@+id/textViewVHPlayerWins"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textViewVHPlayerKD" android:textColor="#000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>