<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="HOW TO FIND YOUR STEAMID64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/title"
            app:layout_constraintBottom_toTopOf="@+id/stepOne"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.431" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textColor="#000000"/>
    <TextView
            android:text="@string/stepOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stepOne"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textColor="#000000"
            android:layout_marginTop="128dp"/>
    <TextView
            android:text="@string/stepTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stepTwo"
            android:textColor="#000000" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/stepOne" android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/stepThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stepThree"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/stepTwo" android:layout_marginTop="24dp" android:textSize="18sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/stepFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stepFour"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/stepThree" android:layout_marginTop="24dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp"/>
    <TextView
            android:text="@string/stepFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stepFive"
            app:layout_constraintTop_toBottomOf="@+id/stepFour" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="#000000" android:layout_marginTop="24dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/stepSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/stepFive" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp" android:textSize="18sp"
            android:textColor="#000000" android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>