<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
        android:layout_width="match_parent">

    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/welcome_message" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.19"
            android:textSize="24sp" android:textColor="#000000"/>

    <TextView
            android:text="@string/input_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/input_message"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3" android:textColor="#DC000000"/>

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_steam_id_64"
            app:layout_constraintTop_toBottomOf="@+id/input_message" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/textInputEditText"/>
    <TextView
            android:text="@string/dont_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dont_know_message"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="#000000" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.25"/>
    <Button
            android:text="@string/tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonTutorial"
            app:layout_constraintTop_toBottomOf="@+id/dont_know_message" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.04000002"/>

</androidx.constraintlayout.widget.ConstraintLayout>